--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,61 @@
 <html>
+<head>
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 150vh;
+            margin: 0;
+            padding: 0;
+        }
+        
+        h1 {
+            text-align: center;
+            margin-top: -50px;
+        }
+    
+        form {
+            width: 400px;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #f4f4f4;
+            margin-top: 50px;
+        }
+    
+        form label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+    
+        form input[type="number"] {
+            width: 100%;
+            padding: 5px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+        }
+    
+        form input[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 3px;
+            background-color: #4CAF50;
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+        }
+    </style>    
+</head>
 <body>
     <div class="login">
        <h1>Agricultural Yields for Each Commodity</h1>
    
        <form action="{{ url_for('predict_datapoint')}}" method="post">
         <h3>
-            <legend>Please input all variable for predicting the yealds of vegetables comcodity</legend>
+            <legend>Please input all variable for predicting the yields of vegetables commodity</legend>
         </h3>
         <div class="mb-3">
             <label class="form-label">Province Name</label>
