--- a/templates/home.html
+++ b/templates/home.html
@@ -289,8 +289,8 @@
           </div>
           <div class="mb-3">
             <label class="form-label">Average Wind Speed</label>
-            <input class="form-control" type="number" name="ff_avg"
-              placeholder="The range is 0-25" min='0' max='25' />
+            <input class="form-control" type="number" name="ff_avg" step="0.001"
+              placeholder="The range is 0-15" min='0' max='15' />
           </div>
           <div class="mb-3">
             <label class="form-label">Luas Wilayah (Hektar)</label>
